<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.as93.minesweeper.MainActivity$PlaceholderFragment"
    android:background="@drawable/background_image">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="140dp"
            android:id="@+id/linearLayout5">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout"
                android:layout_margin="2dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtEasyMode"
                    android:id="@+id/button"
                    android:onClick="startEasyMode"
                    style="@style/mainMenu_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout2"
                android:layout_margin="2dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtMediumMode"
                    android:id="@+id/button2"
                    android:onClick="startMediumMode"
                    style="@style/mainMenu_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout3"
                android:layout_margin="2dp">

                <Button
                    style="@style/mainMenu_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtHardMode"
                    android:onClick="startHardMode"
                    android:id="@+id/button4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout4"
                android:layout_margin="2dp">

                <Button
                    style="@style/mainMenu_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtCustomMode"
                    android:onClick="startCustomMode"
                    android:id="@+id/button5" />
            </LinearLayout>

            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
                android:layout_margin="2dp">

                <Button
                    style="@style/mainMenu_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtScores"
                    android:onClick="goToScores"
                    android:id="@id/cmdScoreLink" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
